Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-121359

QtWebEngineView crashes when scrolling using the touchpad.

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P1: Critical
    • 6.5.7, 6.7.2, 6.8.0 FF
    • 6.7.0 Beta3, 6.8
    • WebEngine
    • None
    • macOS
    • 9f247e306 (dev), 6794e5bda (6.7), b0032ab7a (6.5)

    Description

      Scrolling using the touchpad lead to crash on macOS.

      Sample application to replicate the issue is also attached

      call stack is given below

      ASSERT: "phase != Qt::NoScrollPhase" in file /Users/anualiyas/qt/qt6/qtbase/src/widgets/kernel/qapplication.cpp, line 2858Received signal 60 libQt6WebEngineCore_debug.6.8.0.dyl 0x000000028ddf453c base::debug::CollectStackTrace(void**, unsigned long) + 481 libQt6WebEngineCore_debug.6.8.0.dyl 0x000000028ddc0a60 base::debug::StackTrace::StackTrace(unsigned long) + 922 libQt6WebEngineCore_debug.6.8.0.dyl 0x000000028ddc0af4 base::debug::StackTrace::StackTrace(unsigned long) + 363 libQt6WebEngineCore_debug.6.8.0.dyl 0x000000028ddc0ac0 base::debug::StackTrace::StackTrace() + 404 libQt6WebEngineCore_debug.6.8.0.dyl 0x000000028ddf43a4 base::debug::(anonymous namespace)::StackDumpSignalHandler(int, __siginfo*, void*) + 11765 libsystem_platform.dylib 0x00000001854dda24 _sigtramp + 566 libsystem_pthread.dylib 0x00000001854adcc0 pthread_kill + 2887 libsystem_c.dylib 0x00000001853b9a40 abort + 1808 libQt6Core_debug.6.8.0.dylib 0x000000010bee970c QInternal::registerCallback(QInternal::Callback, bool (*)(void**)) + 09 libQt6Core_debug.6.8.0.dylib 0x000000010bef9e54 QBasicAtomicInteger<bool>::loadRelaxed() const + 010 libQt6Core_debug.6.8.0.dylib 0x000000010bef4b2c qt_message(QtMsgType, QMessageLogContext const&, char const*, char*) + 11211 libQt6Core_debug.6.8.0.dylib 0x000000010c54be6c QMessageLogger::fatal(char const*, ...) const + 6412 libQt6Core_debug.6.8.0.dylib 0x000000010c54b58c qt_assert(char const*, char const*, int) + 9613 libQt6Widgets_debug.6.8.0.dylib 0x000000010abaa254 QApplication::notify(QObject*, QEvent*) + 394414 libQt6WebEngineWidgets_debug.6.8.0. 0x00000001054aafd8 QtWebEngineCore::WebEngineQuickWidget::unhandledWheelEvent(QWheelEvent*) + 8415 libQt6WebEngineCore_debug.6.8.0.dyl 0x000000028025aacc QtWebEngineCore::RenderWidgetHostViewQtDelegateItem::unhandledWheelEvent(QWheelEvent*) + 6016 libQt6WebEngineCore_debug.6.8.0.dyl 0x000000028031e710 QtWebEngineCore::WebEventFactory::sendUnhandledWheelEvent(blink::WebGestureEvent const&, QtWebEngineCore::RenderWidgetHostViewQtDelegate*) + 36417 libQt6WebEngineCore_debug.6.8.0.dyl 0x0000000280236790 QtWebEngineCore::RenderWidgetHostViewQt::GestureEventAck(blink::WebGestureEvent const&, blink::mojom::InputEventResultState, mojo::StructPtr<blink::mojom::ScrollResultData>) + 12418 libQt6WebEngineCore_debug.6.8.0.dyl 0x0000000289c3d5c0 content::RenderWidgetHostImpl::OnGestureEventAck(content::EventWithLatencyInfo<blink::WebGestureEvent> const&, blink::mojom::InputEventResultSource, blink::mojom::InputEventResultState, mojo::StructPtr<blink::mojom::ScrollResultData>) + 37619 libQt6WebEngineCore_debug.6.8.0.dyl 0x00000002897e8ee0 content::InputRouterImpl::OnGestureEventAck(content::EventWithLatencyInfo<blink::WebGestureEvent> const&, blink::mojom::InputEventResultSource, blink::mojom::InputEventResultState, mojo::StructPtr<blink::mojom::ScrollResultData>) + 17220 libQt6WebEngineCore_debug.6.8.0.dyl 0x00000002897dbcf0 content::GestureEventQueue::AckGestureEventToClient(content::EventWithLatencyInfo<blink::WebGestureEvent> const&, blink::mojom::InputEventResultSource, blink::mojom::InputEventResultState, mojo::StructPtr<blink::mojom::ScrollResultData>) + 14421 libQt6WebEngineCore_debug.6.8.0.dyl 0x00000002897dbaac content::GestureEventQueue::AckCompletedEvents() + 292

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            anualiyas Anu Aliyas
            anualiyas Anu Aliyas
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes